[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "disk-numpy-array"
dynamic = ["version"]
authors = [{ name = "shenmishajing", email = "shenmishajing@gmail.com" }]
description = "A library to save and load a large numpy array from disk."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Chinese (Simplified)",
]

[project.optional-dependencies]
# dependencies for development
dev-commit = ["pre-commit", "commitizen"]
dev-doc = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-book-theme",
    "sphinx-autoapi",
    "myst-parser",
    "sphinx_design",
]
dev-build = ["build"]
dev-test = ["tox", "pytest", "pytest-cov"]
dev-core = ["disk-numpy-array[dev-commit]"]
dev = ["disk-numpy-array[dev-core,dev-doc,dev-build,dev-test]"]

# all dependencies
all = ["disk-numpy-array[dev]"]

[project.urls]
Homepage = "https://github.com/shenmishajing/disk_numpy_array"
Repository = "https://github.com/shenmishajing/disk_numpy_array"
Documentation = "https://shenmishajing-project-template.readthedocs.io"
Issues = "https://github.com/shenmishajing/disk_numpy_array/issues"
Changelog = "https://github.com/shenmishajing/disk_numpy_array/blob/main/docs/get_started/changelog.md"

[tool.setuptools_scm]
version_file = "disk_numpy_array/version.py"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --doctest-modules --doctest-glob='*.md' --doctest-continue-on-failure"
testpaths = ["tests", "docs"]

[tool.coverage]
[tool.coverage.run]
omit = ['__init__.py', 'version.py', 'tests/*', 'docs/*', '.venv/*']

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
annotated_tag = true
version_scheme = "pep440"
version_provider = "scm"
changelog_file = "docs/get_started/changelog.md"
update_changelog_on_bump = true
